# compiler-PuralinguaIR

./: .gitignore  Cargo.toml  README.md  __LANG_ID
MsgboxTest/: Puralingua.toml
MsgboxTest/src/: Program.plir
SimpleConsoleTest/: Puralingua.toml
crates/ast/: Cargo.toml
crates/ast/src/: field.rs  generics.rs  identifier.rs  item.rs  lib.rs  method.rs  ty.rs
crates/ast/src/method/: statement.rs
crates/ast/src/ty/: class.rs  interface.rs  struct.rs
crates/proc_macro_utils/: Cargo.toml
crates/token/: Cargo.toml
crates/token/proc_macro/: Cargo.toml
crates/token/proc_macro/src/: derive_enum_alias.rs
crates/token/src/: keyword.rs  lib.rs  literal.rs  parse.rs  special_char.rs  token_aliases.rs
src/: build_impl.rs  lib.rs  tests.rs
